make some changes in frontend and in backend for adding category